bk_ida/gccida/g0/set_reload_reg
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/set_reload_reg/src/reload1.c:5533:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode test_mode; // [rsp+14h] [rbp-Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/set_reload_reg/src/reload1.c:5549:53: error: use of undeclared identifier 'machine_mode'
|| rld[r].out && !ix86_hard_regno_mode_ok( regno, ( machine_mode)*( ( unsigned __int8 *)rld[r].out + 2)) ) 
                                                    ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/set_reload_reg/src/obj/reload1.o] Error 1
